package crypto.theblockchainpost.designpatterns.factory.simplefactory;

import crypto.theblockchainpost.designpatterns.factory.Pizza;

public class VeggiePizza extends Pizza {
}
